[PAXCDI-19] integrate MyFaces in TCK setup, fix web.xml