@@ -235,7 +235,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <useManifestOnlyJar>false</useManifestOnlyJar>
-                    <argLine>-ea</argLine>
+                    <argLine>-ea -XX:MaxPermSize=192m</argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>example-suite.xml</suiteXmlFile>
                     </suiteXmlFiles>
